--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/milos-ljubinkovic"
-    - label: "Instagram"
+    - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/milos-ljubinkovic-17279a5a/"
 
@@ -78,7 +78,7 @@ footer:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/milos-ljubinkovic"
-    - label: "Instagram"
+    - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/milos-ljubinkovic-17279a5a/"
 
