--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,8 @@
 main:
   - title: "Posts"
     url: /posts/
+  - title: "CV"
+    url: /cv/
   - title: "Categories"
     url: /categories/
   - title: "Tags"
