--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Miloš Ljubinković
-email:
+email: milos@ljubinkovic.com
 description: >- # this means to ignore newlines until "baseurl:"
   website
 # twitter_username: username
@@ -58,7 +58,7 @@ plugins:
 author:
   name   : "Miloš Ljubinković"
   avatar : "/assets/images/bio-photo.png"
-  bio    : "Miloš Ljubinković"
+  bio    : "Experienced software developer and architect. Skilled at providing simple solutions to complex problems and turning startups into real companies."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
