--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
     url: /posts/
   - title: "CV"
     url: /cv/
-  - title: "Categories"
-    url: /categories/
+  # - title: "Categories"
+  #   url: /categories/
   - title: "Tags"
     url: /tags/
   - title: "About"
