--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,12 @@ timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 include:
   - _pages
 
+analytics:
+  provider: "google"
+  google:
+    tracking_id: "GTM-M2D4PMX7"
+    anonymize_ip: false # default
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
